# glslens

./: .gitmodules  CMakeLists.txt  README.md  build.gradle  pom.xml
.github/workflows/: build.yml
glslens/: main.cpp
glslens/wrappers/: shader_program.cpp
src/main/java/com/glslens/: EShLanguage.java  GLSLens.java  NativeLibrary.java  UniformInfo.java
src/main/java/glslang/: EShLanguage.java  TObjectReflection.java
src/main/native/: CMakeLists.txt
src/main/native/src/jni/: com_glslens_GLSLens.cpp  com_glslens_GLSLens.h
src/main/native/src/wrappers/: shader_program.cpp  shader_program.h  uniform_info.cpp  uniform_info.h
